--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
