--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router-dom": "^7.0.1",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "tailwindcss-preset-px-to-rem": "^1.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
