--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "jsqr": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router-dom": "^7.0.1",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6",
     "tailwindcss-preset-px-to-rem": "^1.2.1"
   },
   "devDependencies": {
