--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.0.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
+    "sweetalert": "^2.1.2",
     "tailwindcss-preset-px-to-rem": "^1.2.1"
   },
   "devDependencies": {
